# LibJpegCompress

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/chen/libjpegcompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libs/: Readme
app/src/main/java/com/chen/libjpegcompress/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/chen/libjpegcompress/: ExampleUnitTest.java
compress/: build.gradle
compress/src/androidTest/java/com/chen/compress/: ExampleInstrumentedTest.java
compress/src/main/: AndroidManifest.xml
compress/src/main/java/com/chen/compress/: CompressUtils.java
compress/src/test/java/com/chen/compress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
